# evanlesmez.github.io

./: ._quarto.yml.swo  ._quarto.yml.swp  .gitignore  CNAME  README.md  _quarto.yml  about.qmd  index.html  index.qmd  package.json  pyproject.toml  requirements.txt
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/xref/: 62151560  INDEX
_site/: about.html  robots.txt  sitemap.xml
docs/: about.html  gurus.html  idears.html  index.html  index.xml  listings.json  playground.html  search.json  sitemap.xml  spotify.html
posts/01-algorithms-inherit-bias/: index.qmd
posts/01-ethics-of-tech/: index.qmd
posts/02-devlog-day1/: index.qmd
posts/03-devlog-day2/: index.qmd
posts/04-devlog-day3/: index.qmd
posts/05-devlog-day4/: index.qmd
posts/06-devlog-day5/: index.qmd
posts/07-devlog-day6/: index.qmd
posts/08-devlog-day7/: index.qmd
posts/09-devlog-day8/: index.qmd
posts/10-devlog-day9/: index.qmd
posts/11-devlog-day10/: index.qmd
posts/12-devlog-day11/: index.qmd
posts/13-devlog-day12/: index.qmd
posts/14-devlog-day13/: index.qmd
posts/15-devlog-day14/: index.qmd
posts/16-devlog-day15/: index.qmd
posts/17-devlog-day16/: index.qmd
posts/18-devlog-day17/: index.qmd
posts/19-devlog-day18/: index.qmd
posts/20-devlog-day19/: index.qmd
posts/2023-04-28-first-post-fastai/: index.ipynb
posts/21-devlog-day20/: index.qmd
posts/22-devlog-day21/: index.qmd
posts/23-devlog-day22/: index.qmd
posts/24-back-to-fastai/: index.qmd
requirements/: core.txt  dev.txt
scripts/: audioController.js  pin_reqs.sh
styles/: index.css
(+45 files in other folders)
